# crewai-opik-tracing

./: .gitignore  README.md  pyproject.toml
Report/: reportagent.md
agent_trace/: README.md  pyproject.toml
agent_trace/src/agent_trace/: crew.py  main.py
agent_trace/src/agent_trace/config/: agents.yaml  tasks.yaml
src/agent_trace/: crew.py  main.py  opik_learning_lab.py
src/agent_trace/config/: agents.yaml  tasks.yaml
tests/: dummytest2.txt
