[project]
name = "agent_trace"
version = "0.1.0"
description = "agent-trace using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crew>=0.9.2",
    "crewai[tools]==1.9.3",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "litellm>=1.75.3",
    "opik>=1.8.19",
    "python-dotenv>=1.1.1",
    "tools>=1.0.23",
]

[project.scripts]
agent_trace = "agent_trace.main:run"
run_crew = "agent_trace.main:run"
train = "agent_trace.main:train"
replay = "agent_trace.main:replay"
test = "agent_trace.main:test"
run_with_trigger = "agent_trace.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
